# apertium-guc-spa

./: .gitattributes  .gitignore  Makefile  Makefile.am  README  apertium-guc-spa.guc-spa.dix  apertium-guc-spa.guc.dix  apertium-guc-spa.spa-guc.t2x  configure.ac  modes.xml
